@@ -1,3 +1,9 @@
+2007-06-07  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/persistence.scm
+	  Fix a problem that cannot check or fix efs database.
+	  It's embugged at 2007-05-24.
+
 2007-06-02  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/kahua-user.scm
